--- a/app/src/main/res/drawable/bottom_navigation_color.xml
+++ b/app/src/main/res/drawable/bottom_navigation_color.xml
@@ -4,5 +4,5 @@
         android:color="@color/colorPrimary" />
     <item
         android:state_checked="false"
-        android:color="@color/colorBlack" />
+        android:color="@color/colorAccent" />
 </selector>
