--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#fff176</color>
+    <color name="colorPrimaryLight">#ffffa8</color>
+    <color name="colorPrimaryDark">#cabf45</color>
+    <color name="colorSecondary">#cddc39</color>
+    <color name="colorSecondaryLight">#ffff6e</color>
+    <color name="colorSecondaryDark">#cabf45</color>
+    <color name="colorAccent">#000000</color>
     <color name="colorBlack">#000000</color>
 </resources>
