--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,61 +6,69 @@
     app:startDestination="@+id/my_recipes_fragment">
 
     <fragment android:id="@+id/my_ingredients_list_fragment"
-        android:name="com.inved.freezdge.controller.fragment.AllRecipesFragment"
-        android:label="fragment_sample"
+        android:name="com.inved.freezdge.controller.fragment.MyIngredientsListFragment"
+        android:label="Freezdge"
         tools:layout="@layout/my_ingredients_list_fragment">
 
         <action
-        android:id="@+id/action_go_to_my_recipes"
+        android:id="@+id/action_to_my_recipes_fragment"
         app:destination="@id/my_recipes_fragment" />
 
         <action
-            android:id="@+id/action_go_to_search"
+            android:id="@+id/action_to_all_recipes_fragment"
+            app:destination="@id/all_recipes_fragment" />
+
+        <action
+            android:id="@+id/action_to_search_activity"
             app:destination="@id/search_ingredients_activity" />
+
+        <action
+            android:id="@+id/menu_grocery_list"
+            app:destination="@id/my_grocery_list_activity" />
 
     </fragment>
 
     <fragment android:id="@+id/my_recipes_fragment"
-        android:name="com.inved.freezdge.controller.fragment.AllRecipesFragment"
-        android:label="fragment_sample"
+        android:name="com.inved.freezdge.controller.fragment.MyRecipesFragment"
+        android:label="Freezdge"
         tools:layout="@layout/my_recipes_fragment">
 
         <action
-            android:id="@+id/action_go_to_all_recipes"
+            android:id="@+id/action_to_all_recipes_fragment"
             app:destination="@id/all_recipes_fragment" />
 
         <action
-            android:id="@+id/action_go_to_my_ingredients"
+            android:id="@+id/action_to_my_ingredients_list_fragment"
             app:destination="@id/my_ingredients_list_fragment" />
+
+        <action
+            android:id="@+id/menu_grocery_list"
+            app:destination="@id/my_grocery_list_activity" />
 
     </fragment>
 
     <fragment android:id="@+id/all_recipes_fragment"
         android:name="com.inved.freezdge.controller.fragment.AllRecipesFragment"
-        android:label="fragment_sample"
+        android:label="Freezdge"
         tools:layout="@layout/all_recipes_fragment">
 
         <action
-            android:id="@+id/action_go_to_my_recipes"
+            android:id="@+id/action_to_my_recipes_fragment"
             app:destination="@id/my_recipes_fragment" />
 
         <action
-            android:id="@+id/action_open_filter_dialog"
-            app:destination="@id/filter_dialog" />
-
-    </fragment>
-
-
-    <activity android:id="@+id/Main_Activity"
-        android:name="com.inved.freezdge.controller.activity.MainActivity"
-        android:label="Main activity"
-        tools:layout="@layout/activity_main">
+            android:id="@+id/action_to_my_ingredients_list_fragment"
+            app:destination="@id/my_ingredients_list_fragment" />
 
         <action
-            android:id="@+id/action_go_to_my_grocery"
+            android:id="@+id/action_to_filter_dialog"
+            app:destination="@id/filter_dialog" />
+
+        <action
+            android:id="@+id/menu_grocery_list"
             app:destination="@id/my_grocery_list_activity" />
 
-    </activity>
+    </fragment>
 
     <activity android:id="@+id/my_grocery_list_activity"
         android:name="com.inved.freezdge.controller.activity.MyGroceryListActivity"
