--- a/app/src/main/res/layout/all_recipes_fragment.xml
+++ b/app/src/main/res/layout/all_recipes_fragment.xml
@@ -14,5 +14,9 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewAllRecipes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
