--- a/app/src/main/res/layout/my_recipes_fragment.xml
+++ b/app/src/main/res/layout/my_recipes_fragment.xml
@@ -14,4 +14,9 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewMyRecipes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
