--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:orientation="vertical">
 
     <!-- Toolbar -->
-    <include layout="@layout/toolbar" />
+    <include
+        layout="@layout/toolbar" />
 
 
     <fragment
@@ -17,7 +18,9 @@
         app:defaultNavHost="true"
         android:id="@+id/navHost"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_above="@id/activity_main_bottom_navigation">
 
 
     <!-- FrameLayout for our fragments
