--- a/app/src/main/res/layout/my_ingredients_list_fragment.xml
+++ b/app/src/main/res/layout/my_ingredients_list_fragment.xml
@@ -12,6 +12,11 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        android:visibility="gone"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragment_ingredient_list_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
