--- a/app/src/main/res/layout/fragment_my_ingredients_list.xml
+++ b/app/src/main/res/layout/fragment_my_ingredients_list.xml
@@ -13,6 +13,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/chipGroup"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+
+        </com.google.android.material.chip.ChipGroup>
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
@@ -32,7 +48,7 @@
         app:srcCompat="@drawable/ic_add_ingredient_selected_24dp"
         app:backgroundTint="@color/colorPrimary"
         app:fabSize="normal"
-        app:layout_anchor="@id/recyclerview"
+        app:layout_anchor="@id/chipGroup"
         app:layout_anchorGravity="bottom|right|end" />
 
 
