Create repository, model and view model for ingredients and favouritesRecipes

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,7 +3,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".controller.activity.RestaurantActivity">
+    tools:context=".uiGeneral.activity.RestaurantActivity">
 
     <item
         android:id="@+id/menu_grocery_list"
