--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@+id/my_recipes_fragment">
 
     <fragment android:id="@+id/my_ingredients_list_fragment"
-        android:name="com.inved.freezdge.controller.fragment.MyIngredientsListFragment"
+        android:name="com.inved.freezdge.ingredientslist.ui.MyIngredientsListFragment"
         android:label="Freezdge"
         tools:layout="@layout/fragment_my_ingredients_list">
 
@@ -29,7 +29,7 @@
     </fragment>
 
     <fragment android:id="@+id/my_recipes_fragment"
-        android:name="com.inved.freezdge.controller.fragment.MyRecipesFragment"
+        android:name="com.inved.freezdge.favourites.ui.MyRecipesFragment"
         android:label="Freezdge"
         tools:layout="@layout/fragment_my_recipes">
 
@@ -48,7 +48,7 @@
     </fragment>
 
     <fragment android:id="@+id/all_recipes_fragment"
-        android:name="com.inved.freezdge.controller.fragment.AllRecipesFragment"
+        android:name="com.inved.freezdge.recipes.ui.AllRecipesFragment"
         android:label="Freezdge"
         tools:layout="@layout/fragment_all_recipes">
 
@@ -71,14 +71,14 @@
     </fragment>
 
     <activity android:id="@+id/my_grocery_list_activity"
-        android:name="com.inved.freezdge.controller.activity.MyGroceryListActivity"
+        android:name="com.inved.freezdge.ingredientslist.ui.MyGroceryListActivity"
         android:label="Grocery list"
         tools:layout="@layout/activity_my_grocery_list">
 
     </activity>
 
     <activity android:id="@+id/search_ingredients_activity"
-        android:name="com.inved.freezdge.controller.activity.SearchIngredientsActivity"
+        android:name="com.inved.freezdge.ingredientslist.ui.SearchIngredientsActivity"
         android:label="Search Activity"
         tools:layout="@layout/activity_search_ingredients">
 
@@ -86,7 +86,7 @@
 
 
     <dialog android:id="@+id/filter_dialog"
-        android:name="com.inved.freezdge.controller.dialog.FilterDialog"
+        android:name="com.inved.freezdge.uiGeneral.dialog.FilterDialog"
         android:label="Filter dialog"
         tools:layout="@layout/dialog_filter">
 
