--- a/app/src/main/res/layout/item_ingredients_list.xml
+++ b/app/src/main/res/layout/item_ingredients_list.xml
@@ -7,18 +7,16 @@
     android:orientation="vertical"
     android:padding="20dip">
 
-    <ImageButton
+    <ImageView
         android:id="@+id/item_ingredients_list_image_favorite_selected_or_not_imageview"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:adjustViewBounds="true"
-        android:background="@drawable/state_ingredient_list"
         android:scaleType="fitCenter"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginEnd="@dimen/default_margin"
-        app:srcCompat="@drawable/ic_add_ingredient_selected_24dp"
         android:contentDescription="@string/description_image" />
 
 
