--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -5,6 +5,7 @@
     <dimen name="default_extra_double_large_margin">45dip</dimen>
     <dimen name="default_extra_mega_large_margin">60dip</dimen>
     <dimen name="default_margin">10dip</dimen>
+    <dimen name="little_margin">5dip</dimen>
     <dimen name="default_title_size">40sp</dimen>
     <dimen name="default_little_title_size">30sp</dimen>
     <dimen name="default_text_size">13sp</dimen>
