--- a/app/src/main/res/layout/item_recipes_list.xml
+++ b/app/src/main/res/layout/item_recipes_list.xml
@@ -44,6 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
+                android:maxLines="2"
                 android:layout_marginTop="@dimen/default_margin"
                 android:text="@string/recipe_list_item_label"
                 android:textStyle="bold"
@@ -83,7 +84,7 @@
                 android:layout_height="0.5dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                android:background="@color/colorPrimaryLight"
+                android:background="@color/colorAccent"
                 app:layout_constraintTop_toTopOf="@id/fragment_recipe_list_favorite_selected_or_not"
                 app:layout_constraintLeft_toLeftOf="@id/fragment_recipes_list_item_label"
                 app:layout_constraintRight_toRightOf="@id/fragment_recipes_list_item_label"
