--- a/app/src/main/res/layout/item_ingredients_list.xml
+++ b/app/src/main/res/layout/item_ingredients_list.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin"
         android:text="@string/menu_bottom_ingredient_at_home"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorAccent"
         android:textStyle="bold"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
