--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#fff176</color>
-    <color name="colorPrimaryLight">#ffffa8</color>
-    <color name="colorPrimaryDark">#cabf45</color>
-    <color name="colorSecondary">#cddc39</color>
-    <color name="colorSecondaryLight">#ffff6e</color>
-    <color name="colorSecondaryDark">#cabf45</color>
+    <color name="colorPrimary">#ff8f00</color>
+    <color name="colorPrimaryLight">#ffc046</color>
+    <color name="colorPrimaryDark">#c56000</color>
     <color name="colorAccent">#000000</color>
-    <color name="colorBlack">#000000</color>
 
     <color name="colorGreen">#4CAF50</color>
     <color name="colorOrange">#FF9800</color>
