--- a/app/src/main/res/layout/item_recipes_list.xml
+++ b/app/src/main/res/layout/item_recipes_list.xml
@@ -37,6 +37,12 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:background="@color/colorPrimary" />
 
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.75"/>
 
             <TextView
                 android:id="@+id/fragment_recipes_list_item_label"
@@ -55,16 +61,18 @@
 
             <TextView
                 android:id="@+id/fragment_recipes_list_item_matching"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/default_margin"
                 android:padding="10dp"
                 android:text="@string/recipe_list_item_matching"
                 android:textStyle="bold"
+                android:gravity="center"
                 android:elevation="1dp"
                 android:background="@drawable/border_green"
                 android:textColor="@color/colorWhite"
                 app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="@id/guideline"
                 app:layout_constraintTop_toTopOf="@id/fragment_recipes_list_item_label" />
 
 
