--- a/app/src/main/res/layout/item_recipes_list_retrofit.xml
+++ b/app/src/main/res/layout/item_recipes_list_retrofit.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/recipe_list_row_id"
+    android:id="@+id/recipe_list_retrofit_row_id"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/default_large_margin"
