Implementing no item found text on fragments

--- a/app/src/main/res/layout/fragment_all_recipes.xml
+++ b/app/src/main/res/layout/fragment_all_recipes.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
+        android:id="@+id/not_found"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TBL: ALL RECIPES"
