--- a/app/src/main/res/layout/activity_my_grocery_list.xml
+++ b/app/src/main/res/layout/activity_my_grocery_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,18 +15,21 @@
         android:layout_gravity="center"
         android:text="TBL: GROCERY"
         android:gravity="center"
-        android:visibility="visible"
+        android:visibility="gone"
         />
 
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/chipGroup"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="24dp"
         >
 
+
+
     </com.google.android.material.chip.ChipGroup>
+
 
 </LinearLayout>
