--- a/app/src/main/res/layout/activity_search_ingredients.xml
+++ b/app/src/main/res/layout/activity_search_ingredients.xml
@@ -26,15 +26,15 @@
     <FrameLayout
         android:id="@+id/animation_view_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:background="@color/colorWhite"
-        android:visibility="gone"
+        android:visibility="visible"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        >
+        app:layout_constraintTop_toTopOf="parent"
+        android:focusable="true">
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/animation_view"
@@ -42,6 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             app:lottie_autoPlay="true"
+            android:visibility="visible"
             app:lottie_fileName="10816-walking-taco.json"
             app:lottie_loop="true" />
     </FrameLayout>
