Search ingredient onBackPress and searchview handle for multiple fragments

--- a/app/src/main/res/menu/ingredient_bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/ingredient_bottom_navigation_menu.xml
@@ -3,32 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_to_fragment_cream"
-        android:enabled="true"
         android:icon="@drawable/menu_drawer_ingredients_list_icon"
         android:title="@string/ingredient_type_cream"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom|withText" />
     <item
         android:id="@+id/action_to_fragment_fruits_vegetables"
-        android:enabled="true"
         android:icon="@drawable/menu_bottom_favourite_list_icon"
-        android:title="@string/ingredient_type_fruits_vegetables"
-        app:showAsAction="ifRoom" />
+        android:title="@string/ingredient_type_fruits_vegetables_short"
+        app:showAsAction="ifRoom|withText" />
     <item
         android:id="@+id/action_to_fragment_epicerie"
-        android:enabled="true"
         android:icon="@drawable/menu_bottom_recipes_list_icon"
         android:title="@string/ingredient_type_epicerie"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom|withText" />
     <item
         android:id="@+id/action_to_fragment_fish"
-        android:enabled="true"
         android:icon="@drawable/menu_bottom_favourite_list_icon"
         android:title="@string/ingredient_type_fish"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom|withText" />
     <item
         android:id="@+id/action_to_fragment_meat"
-        android:enabled="true"
         android:icon="@drawable/menu_bottom_recipes_list_icon"
         android:title="@string/ingredient_type_meat"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom|withText" />
+
 </menu>
