--- a/app/src/main/res/layout/item_recipes_list_retrofit.xml
+++ b/app/src/main/res/layout/item_recipes_list_retrofit.xml
@@ -35,7 +35,7 @@
                 android:scaleType="fitXY"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:background="@color/colorPrimary" />
+                android:background="@color/colorGrey" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline"
