--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,7 @@
     <color name="colorEpicerie">#DAAD6B</color>
     <color name="colorMeat">#EA938C</color>
     <color name="colorFish">#7683CE</color>
+
+    <color name="Facebook">#3B5998</color>
+    <color name="Google">#DB4A39</color>
 </resources>
